# tournament-infra

./: .gitignore  Cargo.toml  README.md  Rocket.toml  TODO.md  dummy-data.sql  generate_test_data.py  setup_env.sh  tournament-infra.conf
.github/workflows/: rust.yml
api/: .gitignore  Cargo.toml  Rocket.toml  api-spec.yml  setup_env.sh  sqlx-data.json
api/binaries/: chicken-1625924309796  z5361056-1625798535000
api/config/: tournament.toml
api/migrations/: 20210714013955_basics.down.sql  20210714013955_basics.up.sql
api/migrations/2021-06-21-120329_create_basics/: up.sql
api/src/: config.rs  cors.rs  errors.rs  game.rs  isolator.rs  lib.rs  main.rs  models.rs  paginate.rs  rating.rs  schema.rs  tasks.rs
api/src/api/: binary.rs  game.rs  login.rs  logout.rs  mod.rs  ranking.rs  user.rs
api/src/games/: common.rs  mod.rs  round_1.rs
api/src/models/: binary.rs  game.rs  mod.rs  ranking.rs  user.rs
api/src/utils/: db.rs  mod.rs
migrations/2021-06-21-092747_create_users/: up.sql
migrations/2021-06-21-093252_create_games/: down.sql  up.sql
migrations/2021-06-21-120329_create_basics/: down.sql  up.sql
runner/: .gitignore  Cargo.toml  config  diesel.toml  f_bomb  f_bomb.c  hello  hello.c  loudmouth  loudmouth.c  migrations  sleep  sleep.c
runner/src/: game.rs  isolator.rs  main.rs
src/: main.rs  schema.rs
src/api/: login.rs  logout.rs
src/pages/: about.rs  faq.rs  index.rs  login.rs  mod.rs  rankings.rs  signup.rs  spec.rs
src/templates/: functions.rs  mod.rs
templates/: about.tera  base.html.tera  faq.tera  index.html.tera  login.html.tera  navbar.html.tera  signup.html.tera
webapp/: .gitignore  package-lock.json  package.json  snowpack.config.mjs  tsconfig.json
webapp/public/: index.html
webapp/src/: App.tsx  Navbar.tsx  TopNavbar.tsx  UserContext.ts  api.ts  index.css  index.tsx  theme.ts  utils.ts  utils.tsx
webapp/src/client/: App.tsx  api.ts  index.css  index.tsx  theme.ts
webapp/src/client/components/: BinaryListItem.tsx  BinaryStatSummary.tsx  BinaryStatusAlert.tsx  BreadcrumbLink.tsx  ButtonLink.tsx  CodeUploadModal.tsx  FileUpload.tsx  GameList.tsx  Loading.tsx  Navbar.tsx  PageWrapper.tsx  RatingTooltip.tsx  StatSummary.tsx  VStackPageWrapper.tsx
webapp/src/client/hooks/: useBinary.ts  useUserInfo.ts  useUserProfile.ts
webapp/src/client/mocks/: games.ts  hamishwhc.ts  marcchee.ts
webapp/src/client/pages/: About.tsx  AllGames.tsx  BinariesPage.tsx  BinaryPage.tsx  Faqs.tsx  GamePage.tsx  Home.tsx  Login.tsx  Play.tsx  PlayerGames.tsx  Profile.tsx  Rankings.tsx  Settings.tsx  Spec.tsx  index.ts
webapp/src/client/utils/: api.ts  auth.tsx  games.ts  ratings.ts  results.ts  stats.ts  time.ts
webapp/src/components/: BinaryListItem.tsx  BinaryStatSummary.tsx  ButtonLink.tsx  GameList.tsx  Loading.tsx  Navbar.tsx  StatSummary.tsx  VStackPageWrapper.tsx
webapp/src/hooks/: useBinary.ts  useUserInfo.ts  useUserProfile.ts
webapp/src/mocks/: games.ts  hamishwhc.ts  marcchee.ts
webapp/src/pages/: AllGames.tsx  Binaries.tsx  BinariesPage.tsx  BinaryPage.tsx  GamePage.tsx  Login.tsx  LoginPage.tsx  PlayerGames.tsx  Profile.tsx  Rankings.tsx  Settings.tsx  Spec.tsx  index.ts  login.ts  spec.md
webapp/src/pages/games/: Game.tsx  GamePage.tsx
webapp/src/server/: server.ts
webapp/src/utils/: api.ts  auth.tsx  games.ts  results.ts  time.ts
webapp/types/: static.d.ts
website/: Cargo.toml  Rocket.toml
website/src/: main.rs  models.rs  schema.rs
website/src/api/: login.rs
website/src/pages/: about.rs  index.rs  login.rs  mod.rs  rankings.rs  spec.rs
website/src/templates/: functions.rs  mod.rs
website/templates/: login.html.tera  navbar.html.tera  rankings.html.tera  spec.html.tera
(+6 files in other folders)
