[package]
name = "tournament-infra"
version = "0.1.0"
authors = ["insou22 <zac.kologlu@gmail.com>"]
edition = "2018"

[dependencies]
rocket  = { version = "0.4.10", features = ["private-cookies"] }
rocket_contrib = { version = "0.4.10", features = ["tera_templates"] }
serde   = { version = "1.0", features = ["derive"] }
tera    = "1.8.0"
diesel  = { version = "1.4.4", features = ["sqlite"] }
dotenv  = "0.15.0"
reqwest = { version = "0.11", features = ["blocking"] }
time    = "0.1"