[package]
name = "tournament-api"
version = "0.1.0"
authors = ["insou22 <zac.kologlu@gmail.com>"]
edition = "2018"

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["secrets", "json"] }
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15"
reqwest = { version = "0.11", features = [] }
time = { version = "0.2", features = ["std"] }
sqlx = { version = "0.5", features = ["runtime-tokio-native-tls", "macros", "migrate", "sqlite", "offline"] }