[package]
name = "tournament-api"
version = "0.1.0"
authors = ["insou22 <zac.kologlu@gmail.com>"]
edition = "2018"

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["secrets", "json"] }
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15"
reqwest = { version = "0.11", features = [] }
time = { version = "0.2", features = ["std"] }
sqlx = { version = "0.5.5", features = [
    "runtime-tokio-native-tls",
    "macros",
    "migrate",
    "sqlite",
    "offline",
] }
ring = "0.16.20"
data-encoding = "2.3.2"
error-chain = "0.12.4"
rand = "0.8"
celery = "0.4.0-rc8"
tokio = { version = "1.7", features = ["full"] }
futures-core = "0.3"
futures-util = "0.3"
bollard = "0.11"
env_logger = "0.9.0"
log = "0.4.14"
bbt = "0.2.0"
async-process = "1.2.0"