[package]
name = "runner"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio   = { version = "1.7", features = ["full"] }
futures-core = "0.3"
futures-util = "0.3"
diesel  = { version = "1.4", features = ["sqlite"] }
bollard = "0.11"
rand    = "0.8"
