[package]
name = "tournament-infra"
version = "0.1.0"
authors = ["insou22 <zac.kologlu@gmail.com>"]
edition = "2018"

[dependencies]
rocket  = { version = "0.5.0-rc.1", features = ["secrets", "json"] }
rocket_dyn_templates = { version = "0.1.0-rc.1", features = ["tera"] }
serde   = { version = "1.0", features = ["derive"] }
tera    = "1.11"
diesel  = { version = "1.4", features = ["sqlite"] }
dotenv  = "0.15"
reqwest = { version = "0.11", features = [] }
time    = { version = "0.2", features = ["std"] }
